--- a/src/components/HabitItem/HabitItem.module.css
+++ b/src/components/HabitItem/HabitItem.module.css
@@ -4,14 +4,13 @@
 }
 
 #item {
-  background-color: green;
+  background-color: var(--background-color);
+  opacity: 0.8;
   padding: 2rem 1.5rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border-bottom: 4px solid black;
-}
-
-#item:first-child {
-  border-top: 4px solid black;
+  border: 4px solid var(--border-color);
+  width: 80%;
+  border-radius: 15px;
 }
