--- a/src/components/HabitItem/HabitItem.module.css
+++ b/src/components/HabitItem/HabitItem.module.css
@@ -1,16 +1,47 @@
-#firstRow {
-  display: flex;
-  gap: 1rem;
-}
-
-#item {
+.item {
   background-color: var(--background-color);
   opacity: 0.8;
   padding: 2rem 1.5rem;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   gap: 1rem;
   border: 4px solid var(--border-color);
   width: 80%;
   border-radius: 15px;
+}
+
+.high {
+  color: #ed2938;
+}
+
+.medium {
+  color: #ff8c01;
+}
+
+.low {
+  color: #ffe733;
+}
+
+.tag {
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.removeBtn {
+  background-color: var(--delete-color);
+  color: #fff;
+  font-weight: bold;
+  border-radius: 10px;
+  border: 1px solid var(--border-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8.5rem;
+  height: 2.5rem;
+}
+
+.removeBtnDiv {
+  display: flex;
+  justify-content: right;
+  align-items: end;
 }
