--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,6 @@ body {
   --button-color: #537310;
   --forground-color: #f2ebc9;
   --text-color: #000000;
+  --delete-color: #e60101;
   /* dont know if we will use #A0EAF2 */
 }
