--- a/src/components/HabitsForm/HabitsForm.module.css
+++ b/src/components/HabitsForm/HabitsForm.module.css
@@ -2,9 +2,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
+  right: 0;
   width: 100%;
   height: 100vh;
-  z-index: 99999;
+  z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,4 +35,8 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 1rem;
+}
+
+#closeBtn {
+  background-color: var(--delete-color);
 }
