--- a/src/pages/Habits/Habits.module.css
+++ b/src/pages/Habits/Habits.module.css
@@ -28,3 +28,17 @@
 #hideBtn:hover {
   cursor: pointer;
 }
+
+.backBtnDiv {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  padding-left: 1rem;
+}
+
+.backBtn {
+  background-color: var(--button-color);
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  padding: 0.3rem 0.5rem;
+}
