--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -9,11 +9,14 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
+  
 }
 
 .eventform label {
   font-size: 12px;
-  color: #666;
+  color: #000000;
+  display: flex;
+  justify-content: center;
 }
 
 .eventform input {
@@ -21,6 +24,7 @@
   border-radius: 10px;
   border: 1px solid #ddd;
   font-size: 14px;
+  display: flex;
 }
 
 .eventform button {
