--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,25 +1,25 @@
 .page {
   min-height: 100vh;
-  background-color: #66C4D9;
+  width: 100%;
+  background-color: #66c4d9;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .header {
-  width: 100%;
-  max-width: 1100px;
+  width: 80%;
   padding: 40px 20px;
-  position: relative;
 }
 
-.header h1 {
+.headerH1 {
   text-align: center;
   font-size: 32px;
   font-weight: 600;
   margin-bottom: 8px;
 }
 
-.header p {
+.headerText {
   text-align: center;
   margin-bottom: 32px;
   color: #000000;
@@ -47,11 +47,14 @@
 }
 
 .auth {
-  position: absolute;
-  top: 30px;
-  right: 40px;
+  display: flex;
+  justify-content: end;
+}
+
+.contentContainer {
+  display: flex;
 }
 
 .content {
-  display: none;
+  min-width: 333px;
 }
