--- a/src/components/EventItem/EventItem.module.css
+++ b/src/components/EventItem/EventItem.module.css
@@ -19,10 +19,24 @@
   gap: 4px;
 }
 
-.eventitem button {
+.editbutton {
   border: none;
   background: transparent;
   cursor: pointer;
-  color:#537310;
+  background-color:#537310;
   font-size: 13px;
+  border: 4px solid var(--border-color);
+  border-radius: 8px;
+}
+
+.deletebutton {
+  background-color: red;
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
+}
+
+.buttoncontainer {
+  display: flex;
+  gap: 8px;
+  
 }
