--- a/src/components/EventItem/EventItem.module.css
+++ b/src/components/EventItem/EventItem.module.css
@@ -5,8 +5,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #66C4D9;
-  border: 4px solid var(--border-color)
+  background: #66c4d9;
+  border: 4px solid var(--border-color);
+  height: 150px;
 }
 
 .grey {
@@ -23,7 +24,7 @@
   border: none;
   background: transparent;
   cursor: pointer;
-  background-color:#537310;
+  background-color: #537310;
   font-size: 13px;
   border: 4px solid var(--border-color);
   border-radius: 8px;
@@ -38,5 +39,4 @@
 .buttoncontainer {
   display: flex;
   gap: 8px;
-  
 }
